<resources>
    <string name="app_name">XxAlarm</string>
    <string name="humidity">相对湿度</string>
    <string name="temperature">体感温度</string>
    <string name="pressure">气压</string>
    <string name="wind_speed">风速</string>
    <string name="wind_scale">风力等级</string>
    <string name="wind_direction_degree">风向角</string>
    <string name="wind_direction">风向</string>
    <string name="delete_alarm">删除</string>
    <string name="save">保存</string>
    <string name="note">便签</string>
    <string name="edit">编辑</string>
    <string name="search">搜索</string>
</resources>
